# witchtype.github.io

./: CHANGELOG.md  LICENSE  README.md  index.html  site.hs  stack.yaml  witchblog.cabal
css/: default.css  syntax.theme
docs/: about.html  archive.html  contact.html  index.html
docs/css/: default.css  syntax.css
docs/posts/: 2015-08-23-example.html
images/: scroll2.avif
templates/: default.html
