cabal-version:       2.2

name:                witchblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/witchblog#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable witchblog
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base,
                       hakyll,
                       pandoc,
                       aeson,
                       aeson-pretty,
                       bytestring,
                       time
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
